feat: add AI-powered music documentary generation with Spotify integration

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
             <p>Listen to your favorite Spotify tracks mixed with custom audio</p>
         </header>
 
+        
+
         <div id="login" class="section">
             <button id="login-button" class="btn btn-primary">Login with Spotify Premium</button>
             <p class="note">You need a Spotify Premium account to use this player</p>
@@ -64,6 +66,7 @@
     </div>
 
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script src="/config.js"></script>
     <script src="player.js"></script>
 </body>
 </html>
