--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Spotify MP3 Mix Player</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <meta name="theme-color" content="#111111">
 </head>
 <body>
     <div class="container">
