--- a/public/player.html
+++ b/public/player.html
@@ -16,37 +16,51 @@
             <p>Listen to your favorite Spotify tracks mixed with custom audio</p>
         </header>
 
-        <div id="doc-gen" class="section">
-            <h2>Create a Music Documentary</h2>
-            <p>Enter a band or music topic. The AI will return a short history interspersed with 5 songs.</p>
-            <div class="doc-form">
-                <input type="text" id="doc-topic" placeholder="e.g. The Beatles early years" style="width: 100%; padding: 8px;">
-                <textarea id="doc-prompt" placeholder="Optional: add extra instructions (tone, eras to focus, regions, etc.)" style="width: 100%; padding: 8px; margin-top: 8px; min-height: 80px;"></textarea>
-                <button id="generate-doc" class="btn btn-secondary" style="margin-top:8px;">Generate Outline</button>
-                <div id="doc-spinner" class="spinner hidden" style="margin-top:8px;">
-                    <span class="ring"></span>
-                    <span>Generating outline…</span>
+        <div class="dashboard-row">
+            <div id="doc-gen" class="section">
+                <h2>Create a Music Documentary</h2>
+                <p>Enter a band or music topic. The AI will return a short history interspersed with 5 songs.</p>
+                <div class="doc-form">
+                    <input type="text" id="doc-topic" placeholder="e.g. The Beatles early years" style="width: 100%; padding: 8px;">
+                    <textarea id="doc-prompt" placeholder="Optional: add extra instructions (tone, eras to focus, regions, etc.)" style="width: 100%; padding: 8px; margin-top: 8px; min-height: 80px;"></textarea>
+                    <button id="generate-doc" class="btn btn-secondary" style="margin-top:8px;">Generate Outline</button>
+                    <div id="doc-spinner" class="spinner hidden" style="margin-top:8px;">
+                        <span class="ring"></span>
+                        <span>Generating outline…</span>
+                    </div>
+        </div>
                 </div>
-                <div style="display:flex; gap:8px; align-items:center; margin-top:10px; flex-wrap:wrap;">
-                    <input type="text" id="load-id-input" placeholder="Enter playlist ID to load" style="flex:1; min-width:240px; padding:8px;">
+            </div>
+
+            <div id="my-playlists" class="section">
+                <h2>My Playlists</h2>
+                <p>Saved documentary playlists for your Spotify account.</p>
+                <ul id="my-playlists-list" class="playlist-list"></ul>
+                <div id="my-playlists-empty" class="note">No saved playlists yet.</div>
+            </div>
+
+            <div id="import-playlist" class="section">
+                <h2>Import Playlist</h2>
+                <p>Load a saved documentary by its ID.</p>
+                <div style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
+                    <input type="text" id="load-id-input" placeholder="Enter playlist ID" style="flex:1; min-width:240px; padding:8px;">
                     <button id="load-id-btn" class="btn">Load by ID</button>
                     <button id="share-btn" class="btn btn-secondary">Share</button>
                 </div>
-
-        <div id="my-playlists" class="section">
-            <h2>My Playlists</h2>
-            <p>Saved documentary playlists for your Spotify account.</p>
-            <ul id="my-playlists-list" class="playlist-list"></ul>
-            <div id="my-playlists-empty" class="note">No saved playlists yet.</div>
-        </div>
             </div>
+        </div>
             <div class="doc-output" style="margin-top: 12px;">
-                <pre id="doc-output" style="max-height: 220px; overflow:auto; background:#111; color:#ddd; padding:8px; border-radius:4px;"></pre>
+                <div id="doc-status" class="note">Idle.</div>
+                <details id="doc-raw" class="hidden" style="margin-top:8px;">
+                    <summary>Show generated JSON</summary>
+                    <pre id="doc-output" style="max-height: 240px; overflow:auto; background:#111; color:#ddd; padding:8px; border-radius:4px;"></pre>
+                </details>
                 <div id="save-status" style="margin-top:8px; font-size: 0.9rem; color:#9ad; word-break: break-all;"></div>
             </div>
             <p class="note">You're logged in. The generator will identify the artist, pull their catalog, and build an interspersed narration + 5-song playlist with actual track URIs.</p>
         </div>
 
+        <div class="player-wrapper">
         <div id="player">
             <div class="now-playing">
                 <img id="album-art" src="" alt="Album Art" class="album-art">
