--- a/public/player.html
+++ b/public/player.html
@@ -16,39 +16,36 @@
             <p>Listen to your favorite Spotify tracks mixed with custom audio</p>
         </header>
 
-        <div class="dashboard-row">
-            <div id="doc-gen" class="section">
-                <h2>Create a Music Documentary</h2>
-                <p>Enter a band or music topic. The AI will return a short history interspersed with 5 songs.</p>
-                <div class="doc-form">
-                    <input type="text" id="doc-topic" placeholder="e.g. The Beatles early years" style="width: 100%; padding: 8px;">
-                    <textarea id="doc-prompt" placeholder="Optional: add extra instructions (tone, eras to focus, regions, etc.)" style="width: 100%; padding: 8px; margin-top: 8px; min-height: 80px;"></textarea>
-                    <button id="generate-doc" class="btn btn-secondary" style="margin-top:8px;">Generate Outline</button>
-                    <div id="doc-spinner" class="spinner hidden" style="margin-top:8px;">
-                        <span class="ring"></span>
-                        <span>Generating outline…</span>
+        <div class="player-wrapper">
+            <div class="dashboard-row-two">
+                <div class="dashboard-col">
+                    <div id="doc-gen" class="section">
+                        <h2>Create a Music Documentary</h2>
+                        <p>Enter a band or music topic. The AI will return a short history interspersed with 5 songs.</p>
+                        <div class="doc-form">
+                            <input type="text" id="doc-topic" placeholder="e.g. The Beatles early years">
+                            <textarea id="doc-prompt" placeholder="Optional: add extra instructions (tone, eras to focus, regions, etc.)"></textarea>
+                            <div class="field-row">
+                                <button id="generate-doc" class="btn btn-secondary">Generate Outline</button>
+                                <button id="import-open-btn" class="btn">Import by ID</button>
+                                <div id="doc-spinner" class="spinner hidden">
+                                    <span class="ring"></span>
+                                    <span>Generating outline…</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-        </div>
+                </div>
+                <div class="dashboard-col">
+                    <div id="my-playlists" class="section">
+                        <h2>My Playlists</h2>
+                        <p>Saved documentary playlists for your Spotify account.</p>
+                        <ul id="my-playlists-list" class="playlist-list"></ul>
+                        <div id="my-playlists-empty" class="note">No saved playlists yet.</div>
+                    </div>
                 </div>
             </div>
 
-            <div id="my-playlists" class="section">
-                <h2>My Playlists</h2>
-                <p>Saved documentary playlists for your Spotify account.</p>
-                <ul id="my-playlists-list" class="playlist-list"></ul>
-                <div id="my-playlists-empty" class="note">No saved playlists yet.</div>
-            </div>
-
-            <div id="import-playlist" class="section">
-                <h2>Import Playlist</h2>
-                <p>Load a saved documentary by its ID.</p>
-                <div style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
-                    <input type="text" id="load-id-input" placeholder="Enter playlist ID" style="flex:1; min-width:240px; padding:8px;">
-                    <button id="load-id-btn" class="btn">Load by ID</button>
-                    <button id="share-btn" class="btn btn-secondary">Share</button>
-                </div>
-            </div>
-        </div>
             <div class="doc-output" style="margin-top: 12px;">
                 <div id="doc-status" class="note">Idle.</div>
                 <details id="doc-raw" class="hidden" style="margin-top:8px;">
@@ -86,6 +83,10 @@
                 <button id="next" class="btn-control" title="Next">⏭</button>
             </div>
 
+            <div class="player-actions">
+                <button id="share-btn" class="btn btn-secondary">Share current</button>
+            </div>
+
             <div class="volume-control">
                 <span>🔈</span>
                 <input type="range" id="volume" min="0" max="100" value="50">
@@ -100,6 +101,19 @@
 
         <div id="error" class="hidden">
             <p>An error occurred. Please try again.</p>
+        </div>
+
+        <!-- Import modal overlay -->
+        <div id="import-modal" class="modal hidden" aria-hidden="true" role="dialog" aria-labelledby="import-title">
+            <div class="dialog">
+                <h3 id="import-title" style="margin-bottom:8px;">Import Playlist</h3>
+                <p class="note" style="margin-bottom:8px;">Enter a saved playlist ID.</p>
+                <div class="field-row">
+                    <input type="text" id="load-id-input" placeholder="Enter playlist ID" style="flex:1; min-width:220px;">
+                    <button id="load-id-btn" class="btn btn-primary">Load</button>
+                    <button id="import-cancel-btn" class="btn btn-secondary">Cancel</button>
+                </div>
+            </div>
         </div>
     </div>
 
