--- a/public/player.html
+++ b/public/player.html
@@ -50,6 +50,14 @@
 
         <div class="player-wrapper">
         <div id="player">
+            <div class="doc-meta">
+                <h2 id="doc-title" class="doc-title">-</h2>
+                <div class="doc-topic">
+                    <span class="doc-label">Topic</span>
+                    <span id="doc-topic-display" class="doc-topic-value">-</span>
+                </div>
+                <div class="doc-summary" id="doc-summary">-</div>
+            </div>
             <div class="now-playing">
                 <img id="album-art" src="" alt="Album Art" class="album-art">
                 <div class="track-info">
