feat: add iOS-compatible audio playback using HTMLAudioElement instead of WebAudio API

--- a/public/player.html
+++ b/public/player.html
@@ -50,6 +50,8 @@
 
         <div class="player-wrapper">
         <div id="player">
+            <!-- Hidden audio element for narration/local MP3 playback (iOS-friendly) -->
+            <audio id="narration-audio" preload="metadata" playsinline></audio>
             <div class="doc-meta">
                 <h2 id="doc-title" class="doc-title">-</h2>
                 <div class="doc-topic">
