docs: add SSE-based job management system with real-time progress updates

--- a/public/player.html
+++ b/public/player.html
@@ -39,7 +39,7 @@
                                 <button id="import-open-btn" class="btn btn-secondary">Import by ID</button>
                                 <div id="doc-spinner" class="spinner hidden">
                                     <span class="ring"></span>
-                                    <span>Generating outline…</span>
+                                    <span id="doc-spinner-text">Generating outline…</span>
                                 </div>
                             </div>
                         </div>
