feat: add access denied overlay for users not in Spotify developer dashboard

--- a/public/player.html
+++ b/public/player.html
@@ -139,6 +139,16 @@
                 </div>
             </div>
         </div>
+
+        <!-- Access Denied Overlay -->
+        <div id="access-denied-overlay" class="access-overlay hidden">
+            <div class="access-dialog">
+                <h2>🔒 Access Required</h2>
+                <p>Your Spotify account needs to be added to this app's developer dashboard to use the player.</p>
+                <p class="access-note">This is a Spotify requirement for apps in development mode.</p>
+                <p class="access-note">Please email <strong>adam@drop37.com</strong> with your Spotify account email to request access.</p>
+            </div>
+        </div>
     </div>
 
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
