--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify MP3 Mix Player</title>
+    <title>Music Story - AI-Powered Music Documentaries</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>Spotify MP3 Mix Player</h1>
-            <p>Listen to your favorite Spotify tracks mixed with custom audio</p>
+            <h1>Music Story <span style="font-size: 0.6em; color: var(--text-secondary);">(Spotify)</span></h1>
+            <p>Transform any artist or music topic into an immersive audio documentary with AI-narrated context and perfectly curated tracks</p>
             <button id="settings-btn" class="icon-btn" title="Settings">⚙️</button>
         </header>
 
