feat: add dark/light theme toggle with persistent storage and modern UI design

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,10 @@
         <header>
             <h1>Music Story <span style="font-size: 0.6em; color: var(--text-secondary);">(Spotify)</span></h1>
             <p>Transform any artist or music topic into an immersive audio documentary with AI-narrated context and perfectly curated tracks</p>
-            <button id="settings-btn" class="icon-btn" title="Settings">⚙️</button>
+            <div class="header-actions">
+                <button id="theme-toggle-btn" class="icon-btn" title="Toggle Dark/Light Mode">🌓</button>
+                <button id="settings-btn" class="icon-btn" title="Settings">⚙️</button>
+            </div>
         </header>
 
         
